# metalcpp

./: .clang-format  AppleFrameworks.cpp  AppleFrameworks.hpp  CMakeLists.txt
AppKit/: AppKit.hpp  AppKitPrivate.hpp  NSApplication.hpp  NSMenuItem.hpp  NSOpenPanel.hpp  NSView.hpp
Foundation/: Foundation.hpp  NSArray.hpp  NSAutoreleasePool.hpp  NSBundle.hpp  NSData.hpp  NSDate.hpp  NSDictionary.hpp  NSEnumerator.hpp  NSError.hpp  NSLock.hpp  NSNotification.hpp  NSNumber.hpp  NSObjCRuntime.hpp  NSObject.hpp  NSPrivate.hpp  NSProcessInfo.hpp  NSRange.hpp  NSRunLoop.hpp  NSSet.hpp  NSSharedPtr.hpp  NSString.hpp  NSTypes.hpp  NSURL.hpp
Metal/: MTL4ArgumentTable.hpp  MTL4BinaryFunction.hpp  MTL4CommandAllocator.hpp  MTL4CommandBuffer.hpp  MTL4CommandEncoder.hpp  MTL4CommandQueue.hpp  MTL4CommitFeedback.hpp  MTL4Compiler.hpp  MTL4ComputeCommandEncoder.hpp  MTL4Counters.hpp  MTL4LinkedFunctions.hpp  MTL4PipelineDataSetSerializer.hpp  MTL4RenderCommandEncoder.hpp  MTL4RenderPipeline.hpp  MTLAccelerationStructure.hpp  MTLAccelerationStructureCommandEncoder.hpp  MTLAccelerationStructureTypes.hpp  MTLArgument.hpp  MTLArgumentEncoder.hpp  MTLBinaryArchive.hpp  MTLBlitCommandEncoder.hpp  MTLBlitPass.hpp  MTLBuffer.hpp  MTLCaptureManager.hpp  MTLCaptureScope.hpp  MTLCommandBuffer.hpp  MTLCommandEncoder.hpp  MTLCommandQueue.hpp  MTLComputeCommandEncoder.hpp  MTLComputePass.hpp  MTLComputePipeline.hpp  MTLCounters.hpp  MTLDepthStencil.hpp  MTLDevice.hpp  MTLDrawable.hpp  MTLDynamicLibrary.hpp  MTLEvent.hpp  MTLFence.hpp  MTLFunctionConstantValues.hpp  MTLFunctionDescriptor.hpp  (+31 more)
MetalFX/: MTLFXFrameInterpolator.hpp  MTLFXPrivate.hpp  MTLFXSpatialScaler.hpp  MTLFXTemporalDenoisedScaler.hpp  MTLFXTemporalScaler.hpp
MetalKit/: MTKView.hpp  MetalKit.hpp  MetalKitPrivate.hpp
QuartzCore/: CADefines.hpp  CAMetalDisplayLink.hpp  CAMetalDrawable.hpp  CAMetalLayer.hpp  CAPrivate.hpp  QuartzCore.hpp
